# Advanced-Password-Manager

./: .gitignore  ADVANCED_FEATURES_SUMMARY.md  CMakeLists.txt  FEATURES_SUMMARY.md  INSTALL.md  QR_CODE_GUIDE.md  QR_IMPLEMENTATION_SUMMARY.md  README.md  README_ADVANCED.md  build.bat  build_advanced.bat  build_portable.bat  build_qr.bat  build_simple.bat  create_installer.bat
include/: advanced_encryption.h  advanced_features.h  encryption.h  password_history.h  password_manager.h  password_recovery.h  password_sharing.h  password_strength.h  qr_code.h  self_destruct.h  simple_encryption.h  smart_categories.h  two_factor_auth.h  utils.h
src/: advanced_encryption.cpp  advanced_features.cpp  encryption.cpp  main.cpp  main_simple.cpp  password_history.cpp  password_manager.cpp  password_recovery.cpp  password_sharing.cpp  password_strength.cpp  phase1_test.cpp  phase2_test.cpp  phase3_test.cpp  qr_code.cpp  self_destruct.cpp  simple_encryption.cpp  simple_password_manager.cpp  simple_utils.cpp  smart_categories.cpp  standalone_password_manager.cpp  two_factor_auth.cpp  utils.cpp
